[tool.poetry]
name = "chaparral"
version = "0.1.0"
description = ""
authors = ["Seth R Erickson <sr.erickson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
h2 = "^4.1.0"
pydantic = "^2.6.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
